fix z-index for addDocForm

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -166,6 +166,7 @@
     .revisions { float: right }
 
     #puton-toolbar {
+        z-index: 100;
         position: relative;
         text-align: right;
         margin: 10px 0;
